--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
     z-index: 1;
     height: 450px;
     width: 80px;
-    background: #fff;
+    background: #ff4;
     bottom: 0;
     right: 60px;
 }
@@ -76,7 +76,7 @@ body{
     position: absolute;
     z-index: 5;
     width: 200px;
-    height: 350px;
+    height: 330px;
     background-color: wheat;
     bottom: 0;
     left: 0;
@@ -127,4 +127,71 @@ body{
     background:#fff;
     right: 0;
     bottom: 0;   
+}
+
+.left-ear--outer{
+    background: #fff;
+    border-radius: 90%;
+    width: 20px;
+    height: 50px;
+    position: absolute;
+    left:10px;
+}
+.left-ear--inner{
+    background: #fa8;
+    border-radius: 90%;
+    width: 10px;
+    height: 40px;
+    position: absolute;
+    left:5px;
+    top:0;
+    bottom: 0;
+    margin: auto 0;
+}
+.right-ear--outer{
+    background: #fff;
+    border-radius: 90%;
+    width: 20px;
+    height: 50px;
+    position: absolute;
+    left:50px;
+}
+.right-ear--inner{
+    background: #fa8;
+    border-radius: 90%;
+    width: 10px;
+    height: 40px;
+    position: absolute;
+    left:5px;
+    top:0;
+    bottom: 0;
+    margin: auto 0;
+}
+
+.head{
+    width: 80px;
+    height: 80px;
+    background-color: #fff;
+    border-radius: 50%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    position: absolute;
+    top: 30px;
+}
+
+.head__eye{
+    background-color: #000;
+    border-radius: 50%;
+    width: 4px;
+    height: 4px;
+    position: absolute;
+    top: 15px;
+}
+
+.head__eye--left{
+    left: 30px;
+}
+.head__eye--right{
+    right: 30px;
 }
