--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+:root{
+    --lightBlue: #CCEFFF;
+    --darkBrown: #a54a38;
+    --lightBrown: #bf624c;
+    --darkGreen: #51af5e;
+    --lightGreen: #51af5e;
+    --shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+
+}
+
 *{ box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -30,8 +40,9 @@ body{
     width: 300px;
     border: 8px solid #000;
     border-radius: 40px;
-    background-color: #ccefff;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30),0 15px 12px rgba(0, 0, 0, 0.30);
+    overflow: hidden;
+    background-color: var(--lightBlue);
+    box-shadow: var(--shadow)
 }
 
 .layer-1{
@@ -39,7 +50,6 @@ body{
     z-index: 1;
     height: 450px;
     width: 80px;
-    background: #ff4;
     bottom: 0;
     right: 60px;
 }
@@ -48,7 +58,6 @@ body{
     z-index: 2;
     height: 450px;
     width: 80px;
-    background: #fff;
     bottom: 0;
     left: 60px;
 }
@@ -60,7 +69,9 @@ body{
     margin: 0 auto;
     width: 220px;
     height: 400px;
-    background-color: antiquewhite;
+    background-color: var(--lightBrown);
+    box-shadow: var(--shadow);
+    border-radius: 10px 10px 0 0;
     bottom: 0;
 }
 .layer-4{
@@ -68,7 +79,6 @@ body{
     z-index: 4;
     height: 380px;
     width: 80px;
-    background: #fff;
     bottom: 0;
     left: 10px;
 }
@@ -77,7 +87,9 @@ body{
     z-index: 5;
     width: 200px;
     height: 330px;
-    background-color: wheat;
+    background-color: var(--lightBrown);
+    border-radius: 10px 10px 0 0;
+    box-shadow: var(--shadow);
     bottom: 0;
     left: 0;
 }
@@ -86,7 +98,6 @@ body{
     z-index: 6;
     width: 80px;
     height: 300px;
-    background: #fff;
     bottom: 0;
     right: 20px;
 }
@@ -95,16 +106,17 @@ body{
     z-index: 7;
     width: 135px;
     height: 250px;
-    background: antiquewhite;
+    background: var(--lightBrown);
+    box-shadow: var(--shadow);
+    border-radius: 10px 10px 0 0;
     bottom: 0;
     right: 0;
 }
 .layer-8{
     position: absolute;
     z-index: 8;
-    width: 100px;
-    height: 80px;
-    background-color: #ccefff;
+    width: 200px;
+    height: 150px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -115,7 +127,6 @@ body{
     z-index: 9;
     width: 100px;
     height: 80px;
-    background:#fff;
     left: 0;
     bottom: 0;   
 }
@@ -124,7 +135,6 @@ body{
     z-index: 10;
     width: 100px;
     height: 80px;
-    background:#fff;
     right: 0;
     bottom: 0;   
 }
@@ -195,3 +205,78 @@ body{
 .head__eye--right{
     right: 30px;
 }
+
+.lawn{
+    background-color: var(--darkGreen) ;
+    width: 100%;
+    height: 20px;
+    border-radius: 10px 10px 0 0;
+}
+
+.land{
+    width: 100%;
+    height: 30px;
+    background: linear-gradient(135deg, var(--darkGreen) 25%, transparent 25%) -50px 0, linear-gradient(-135deg, var(--darkGreen) 25%, transparent 25%) -50px 0, linear-gradient(45deg, var(--lightBrown) 25%, transparent 25%),linear-gradient(-45deg, transparent 25%, var(--darkBrown) 25%) ;
+    background-size: 33px 30px;
+}
+
+.layer8-lawn{
+    background-color: var(--darkGreen);
+    border-radius: 40px 40px 0 0;
+    bottom: 0;
+    display: inline-block;
+    position: absolute;
+}
+
+.layer8__left-lawn{
+    width: 80px;
+    height: 70%;
+    left: 0;
+}
+
+.layer8__center-lawn{
+    width: 80px;
+    height: 100%;
+    left: 70px;
+}
+
+.layer8__right-lawn{
+    width: 80px;
+    height: 80%;
+    left: 125px;
+}
+
+.cloud{
+    background-color: #fff;
+    width: 80px;
+    bottom: 0;
+    display: inline-block;
+    position: absolute;
+}
+
+.layer9__left-cloud{
+    height: 100%;
+    left: 0px;
+    border-radius: 40px 40px 0 0;
+}
+
+.layer9__right-cloud{
+    height: 60%;
+    left: 30px;
+    border-radius: 0 40px 30px 0;
+
+}
+
+.layer10__right-cloud{
+    height: 100%;
+    left: 27px;
+    border-radius: 40px 40px 0 0;
+}
+
+.layer10__left-cloud{
+    height: 60%;
+    left: -10px;
+    border-radius: 40px 0 0 30px;
+
+}
+
